# Emergent

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  CHANGELOG.md  FILE_REFERENCE.md  LICENSE  PROJECT_SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  package.json  tsconfig.json
.github/workflows/: cd.yml  ci.yml  docs.yml  pages.yml
backend/: Dockerfile  package.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.module.ts  main.ts
cli/: package.json  tsconfig.json
cli/src/: cli.ts
cli/src/commands/: channel.ts  message.ts  user.ts  workspace.ts
docs/: api.md  architecture.md  backend.md  cli.md  contributing.md  db.md  deployment.md  diagrams.md  frontend.md  getting-started.md  index.md  infra.md  mobile.md  sdk.md
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChatHeader.tsx  MessageBubble.tsx  MessageInput.tsx  Sidebar.tsx
frontend/src/hooks/: useSocket.ts
frontend/src/pages/: Chat.tsx  Login.tsx
frontend/src/store/: auth.store.ts  chat.store.ts
infra/: nginx.conf
mobile/: .gitignore  README.md  app.json  package.json  tsconfig.json
mobile/src/api/: auth.api.ts  channels.api.ts  (+1 more)
scripts/: init.sh  start.sh  stop.sh
sdk/go/: emergent.go  go.mod
sdk/python/: pyproject.toml
sdk/python/emergent/: __init__.py
sdk/ts/: package.json  tsconfig.json
tests/: auth.e2e-spec.ts  load-test.js  messages.e2e-spec.ts  run-tests.sh
(+27 files in other folders)
